gke/gke-dashboard-workspace/patches/user-namespace-privileged.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubeflow-user-example-com
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/audit: privileged
    istio-injection: enabled
